--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,5 +14,8 @@ jobs:
         distribution: 'zulu'
         architecture: x64
 
+     name: Build with Maven
+      run: mvn -B package --file /JavaTools/pom.xml
+
     - name: Run tests
       run: mvn test
