--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,7 +14,7 @@ jobs:
         distribution: 'zulu'
         architecture: x64
 
-     name: Build with Maven
+    - name: Build with Maven
       run: mvn -B package --file /JavaTools/pom.xml
 
     - name: Run tests
