--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,8 +14,11 @@ jobs:
         distribution: 'zulu'
         architecture: x64
 
+    - name: Print working directory
+      run: pwd
+
     - name: Build with Maven
-      run: mvn -B package --file /JavaTools/pom.xml
+      run: mvn -B package --file JavaTools/pom.xml
 
     - name: Run tests
       run: mvn test
