--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,7 +18,7 @@ jobs:
       run: pwd
 
     - name: Build with Maven
-      run: mvn -B package --file JavaTools/pom.xml
+      run: mvn -B package --file pom.xml
 
     - name: Run tests
       run: mvn test
