--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,6 +7,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Archive the JAR file
+      uses: actions/upload-artifact@v2
+      with:
+        name: TextTools
+        path: JavaTools/TextTools.jar
+    
     - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
@@ -18,7 +24,7 @@ jobs:
       run: pwd
 
     - name: Build with Maven
-      run: mvn -B package --file ./pom.xml
+      run: mvn -B package --file JavaTools/pom.xml
 
     - name: Run tests
       run: mvn test
