--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,8 +10,8 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
-        java-version: '8'
-        distribution: 'temurin'
+        java-version: '11'
+        distribution: 'zulu'
         architecture: x64
 
     - name: Print working directory
